<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res/com.ih.demo"
    android:id="@+id/layout"
    android:layout_width="match_parent" android:padding="16dp"
    android:layout_height="match_parent"
    android:background="@drawable/splash_bg_image"
    android:orientation="vertical" >

    <com.ih.customwidgets.CustomTextView
        android:id="@+id/settingsVersion"
        style="@style/TextAppearance_grey_shade6_14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:gravity="right"
        android:text="@string/default_version_no_txt"
        custom:customFont="@string/font_roboto_regular" />

    <com.ih.customwidgets.CustomTextView
        android:id="@+id/CopyRights"
        style="@style/TextAppearance_grey_shade6_14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:gravity="right"
        android:text="@string/copyrights_txt"
        custom:customFont="@string/font_roboto_regular" />

</RelativeLayout>